# docs/swagger.json
@@ -20,7 +20,7 @@
     "paths": {
         "/auth/register": {
             "post": {
-                "description": "Takes a book JSON and store in DB. Return saved JSON.",
+                "description": "Takes a user JSON and store in DB. Return saved JSON.",
                 "produces": [
                     "application/json"
                 ],
@@ -30,12 +30,12 @@
                 "summary": "Register a new user",
                 "parameters": [
                     {
-                        "description": "Book JSON",
-                        "name": "book",
+                        "description": "User JSON",
+                        "name": "user",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.AuthenticationInput"
+                            "$ref": "#/definitions/model.RegisterInput"
                         }
                     }
                 ],
@@ -51,13 +51,17 @@
         }
     },
     "definitions": {
-        "model.AuthenticationInput": {
+        "model.RegisterInput": {
             "type": "object",
             "required": [
+                "email",
                 "password",
                 "username"
             ],
             "properties": {
+                "email": {
+                    "type": "string"
+                },
                 "password": {
                     "type": "string"
                 },
@@ -68,7 +72,15 @@
         },
         "model.UserResp": {
             "type": "object",
+            "required": [
+                "email",
+                "userId",
+                "userName"
+            ],
             "properties": {
+                "email": {
+                    "type": "string"
+                },
                 "userId": {
                     "type": "integer"
                 },
